name:                codec
version:             0.2
license:             BSD3
license-file:        LICENSE
synopsis:            Simple bidirectional serialization
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
homepage:            https://github.com/chpatrick/codec

source-repository head
  type:                git
  location:            https://github.com/chpatrick/codec.git

library
  exposed-modules:     Control.Monad.Codec,
                       Data.Aeson.Codec,
                       Data.Binary.Codec,
                       Data.Binary.Bits.Codec
  build-depends:       base >=4.6 && < 6,
                       bytestring >=0.10,
                       binary >=0.7,
                       binary-bits >=0.5,
                       template-haskell >=2.8,
                       mtl >= 2.2.1,
                       aeson >= 0.8.0.2,
                       text >= 1.2.0.4,
                       unordered-containers >= 0.2.5.1,
                       transformers >= 0.4.2.0,
                       profunctors,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite codec-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Data.Aeson.Codec.Test
                       Data.Binary.Codec.Test
  build-depends:       base,
                       bytestring,
                       aeson,
                       codec,
                       tasty,
                       tasty-quickcheck,
                       generic-arbitrary,
                       binary
  ghc-options:         -Wall
  default-language:    Haskell2010