name:                codec
version:             0.2.1
license:             BSD3
license-file:        LICENSE
synopsis:            Simple bidirectional serialization
description:         See the README
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
homepage:            https://github.com/chpatrick/codec
extra-source-files:    README.md

source-repository head
  type:                git
  location:            https://github.com/chpatrick/codec.git

library
  exposed-modules:     Control.Monad.Codec,
                       Data.Aeson.Codec,
                       Data.Binary.Codec,
                       Data.Binary.Bits.Codec
  build-depends:       base >=4.6 && < 6,
                       bytestring,
                       binary,
                       binary-bits,
                       template-haskell,
                       mtl,
                       aeson >= 1.0.0.0,
                       text,
                       unordered-containers,
                       transformers,
                       profunctors,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite codec-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Data.Aeson.Codec.Test
                       Data.Binary.Codec.Test
  build-depends:       base,
                       bytestring,
                       aeson,
                       codec,
                       tasty,
                       tasty-quickcheck,
                       generic-arbitrary,
                       binary
  ghc-options:         -Wall
  default-language:    Haskell2010